--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "build:netlify": "vite build && esbuild netlify/functions/server.ts --platform=node --packages=external --bundle --format=esm --outdir=netlify/functions",
+    "build:netlify": "vite build && esbuild netlify/functions/server.ts --platform=node --packages=external --bundle --format=esm --outdir=netlify/functions && npx copyfiles public/templates/* dist/public/templates/ -u 1",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
@@ -99,6 +99,7 @@
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^4.7.0",
     "autoprefixer": "^10.4.20",
+    "copyfiles": "^2.4.1",
     "cross-env": "^7.0.3",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
