--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development tsx server/index.ts",
     "build": "vite build && esbuild server/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "build:netlify": "vite build && esbuild netlify/functions/server.ts --platform=node --packages=external --bundle --format=esm --outdir=netlify/functions && npx copyfiles public/templates/* dist/public/templates/ -u 1",
+    "build:netlify": "vite build && esbuild netlify/functions/server.ts --platform=node --packages=external --bundle --format=esm --outdir=netlify/functions && npx copyfiles public/templates/* dist/public/ -u 1",
     "start": "cross-env NODE_ENV=production node dist/index.js",
     "check": "tsc",
     "db:push": "drizzle-kit push"
